@@ -1,5 +1,5 @@
 name=H4
-version=0.4.1
+version=0.4.2
 author=Phil Bowles <h4plugins@gmail.com>
 maintainer=Phil Bowles <h4plugins@gmail.com>
 sentence=Cross-platform functional scheduler / timer 
