@@ -1,3 +1,4 @@
+2020/03/02  0.4.2   bugfix - timing / interrupt error in loop causes 1mS per schedule clock "slip"
 2020/02/13  0.4.1   remove _hasName after plugin 0.3.4
 2020/02/05  0.4.0   added global callback onReboot nd hookReboot API function
                     added hooks.ino example in /advanced
